# meson

mesonbuild/modules/: gnome.py
test cases/frameworks/7 gnome/: meson.build
test cases/frameworks/7 gnome/gir/: meson-sample.def  meson-sample2.def  meson.build
test cases/frameworks/7 gnome/gir/dep1/: dep1.def  meson.build
test cases/frameworks/7 gnome/gir/dep1/dep2/: dep2.def  meson.build
test cases/frameworks/7 gnome/gir/dep1/dep3/: dep3.def  meson.build
